--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,110 @@
 
-.footer{
-    background-color: darkslategrey;
+
+@font-face {
+    font-family: 'Dongle';
+    src: url('./fonts/Dongle-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Dongle';
+    src: url('./fonts/Dongle-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+
+body{
+    margin:0;
+    color: #0F1108;
+    font-family:'Dongle';
+    font-size: 25px;
+}
+
+a{
+    text-decoration: none;
+    color: #0F1108;
+}
+
+
+.wrapper{
+    display: flex;
+    border: 1px solid black;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.header-flex{
+    display: flex;
+    flex:0;
+    min-height: 10vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #7FB7BE;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.main-flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D3F3EE;
+    flex:1;
+    border: 1px dashed ;
+    font-weight: normal;
+}
+
+.footer-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex:0;
+    background-color: #7FB7BE;
+    min-height: 10vh;
+    font-size: larger;
+    font-weight: bold;
+}
+
+
+
+.table-flex{
+    flex:1
+}
+table,
+tr,
+th,
+td {
+  border: 1px solid black;
+  text-align: center;
+  
+}
+td {
+  padding: 4px;
+}
+.cotiet{
+  background-color:#FDFD96 ;
+}
+
+
+
+article{ 
+    text-align: right;
+    width:170px;
+}
+
+.row{
+    display: flex;
+    gap:18px;
+    justify-content: center;
+    max-height: 100vh;
+    font-size: larger;
+    
+}
+
+.col{   
+    min-width: 50vh;
+    flex: 0;
+
 }
