--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ a{
     border: 1px solid black;
     flex-direction: column;
     min-height: 100vh;
+    justify-content: space-between;
 }
 
 .header-flex{
